--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,37 +1,28 @@
-pipeline {
+pipeline { 
+  
+   agent any
 
-    agent {
-        node {
-            label 'master'
+   stages {
+   
+     stage('Install Dependencies') { 
+        steps { 
+           sh 'npm install' 
         }
-    }
-    stage('Code Checkout') {
-            steps {
-                checkout([
-                    $class: 'GitSCM', 
-                    branches: [[name: '*/master']], 
-                    userRemoteConfigs: [[url: 'https://github.com/saidusateesh/multi-branch.git']]
-                ])
-            }
+     }
+     
+     stage('Test') { 
+        steps { 
+           sh 'echo "testing application..."'
         }
+      }
 
-    stages {
-        stage('Build') {
-            steps {
-                echo 'Building...'
-                
-            }
-        }
-        stage('Test') {
-            steps {
-                echo 'Testing...'
-                
-            }
-        }
-        stage('Deploy') {
-            steps {
-                echo 'Deploying...'
-                
-            }
-        }
-    }
+         stage("Deploy application") { 
+         steps { 
+           sh 'echo "deploying application..."'
+         }
+
+     }
+  
+   	}
+
+   }
