--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,6 +18,8 @@ pipeline {
             steps {
                 echo 'Deploying...'
                 
+                echo "adding"
+                
             }
         }
     }
